paas/k8s-next-app/service.yaml
# NodePort Service for Next.js app (PFE DevSecOps)
# Allows access from outside the cluster on NodePort
apiVersion: v1
kind: Service
metadata:
  name: next-app
  labels:
    app: next-app
spec:
  type: NodePort
  selector:
    app: next-app
  ports:
    - port: 80
      targetPort: 4000
      nodePort: 30080   # Access via <any-node-ip>:30080
      protocol: TCP
      name: http
